Complete Blog Post Page

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                       >
                       <a class="nav-link custom-nav-link" href="#">بلاگ</a>
                       <a class="nav-link custom-nav-link" href="#">درباره ما</a>
-                      <a class="nav-link custom-nav-link" href="#"
+                      <a class="nav-link custom-nav-link" href="contact.html" target="__blank"
                         >ارتباط با ما</a
                       >
                     </div>
@@ -926,7 +926,7 @@
                 </div>
               </div>
               <div class="col-12">
-                <a href="#" class="show-all">
+                <a href="jobs.html" target="__blank" class="show-all">
                   مشاهده تمام درخواست های کار
                   <i class="fas fa-chevron-left"></i>
                 </a>
