--- a/index.html
+++ b/index.html
@@ -10,10 +10,15 @@
     <link rel="stylesheet" href="assets/css//min/bootstrap-rtl.min.css" />
     <link rel="stylesheet" href="assets/css//min/owl.carousel.min.css" />
     <link rel="stylesheet" href="assets/css//min/owl.theme.default.min.css" />
+   
     <link rel="stylesheet" href="assets/css/style.css" />
   </head>
 
   <body>
+
+
+ 
+
     <!------------------- Start Header Section ---------------- -->
 
     <div class="container-fluid">
@@ -25,7 +30,7 @@
               <div class="col-12 p-0">
                 <nav class="navbar navbar-expand-lg" id="navbar">
                   <a class="navbar-brand" href="#"
-                    ><img src="assets/images/logo-white.png" alt=""
+                    ><img src="assets/images/logo-white-p.png" alt=""
                   /></a>
                   <button
                     class="navbar-toggler"
@@ -43,13 +48,13 @@
                       <a class="nav-link custom-nav-link active" href="#"
                         >صفحه نخست
                       </a>
-                      <a class="nav-link custom-nav-link" href="#"
+                      <a class="nav-link custom-nav-link" href="jobs.html" target="__blank"
                         >جستجوی شغل</a
                       >
                       <a class="nav-link custom-nav-link" href="#"
                         >کارفرما ها</a
                       >
-                      <a class="nav-link custom-nav-link" href="#">بلاگ</a>
+                      <a class="nav-link custom-nav-link" target="__blank" href="blog.html">بلاگ</a>
                       <a class="nav-link custom-nav-link" href="#">درباره ما</a>
                       <a class="nav-link custom-nav-link" href="contact.html" target="__blank"
                         >ارتباط با ما</a
@@ -57,9 +62,9 @@
                     </div>
                   </div>
                   <form class="form-inline d-none d-lg-block">
-                    <button class="btn add-job-btn" type="button">
-                      درخواست کار
-                    </button>
+                   <a href="jobs.html" target="__blank"> <button class="btn add-job-btn"  type="button">
+                    درخواست کار
+                  </button></a>
                     <button class="btn btn-outline-light mr-2" type="button" data-toggle="modal" data-target="#signin-modal">
                       ورود / عضویت
                     </button>
@@ -126,7 +131,7 @@
 
             <a href="#"
               ><img
-                src="assets/images/logo.svg"
+                src="assets/images/logo-blue.png"
                 class="mobile-nav-brand"
                 alt=""
             /></a>
@@ -257,7 +262,7 @@
     <!------------------ Side Menu Section ----------------- -->
     <div class="side-menu">
       <div class="side-menu-header">
-        <img src="assets/images/logo.svg" alt="">
+        <img src="assets/images/logo-blue.png" alt="">
       </div>
       
       <div class="side-nav-content">
@@ -943,14 +948,14 @@
       <div class="container">
         <div class="row">
           <div class="col-12">
-            <div class="section-title">
+            <div class="section-title ">
               <h3>دسته بندی مشاغل پرطرفدار</h3>
               <span> 230 موقعیت شغلی فعال - 112 تا امروز اضافه شد </span>
             </div>
 
             <div class="job-categories">
               <div class="row">
-                <div class="col-12 col-lg-4">
+                <div class="col-12 col-lg-4 ">
                   <div class="job-category-item">
                     <div class="category-icon">
                       <i class="fas fa-coins"></i>
@@ -1089,7 +1094,7 @@
           </div>
         </div>
         <div class="col-12 col-lg-6">
-          <div class="steps-content">
+          <div class="steps-content ">
             <div class="section-title">
               <h3>پیدا کردن شغل دلخواهت فقط در 3 مرحله</h3>
               <span>
@@ -1175,7 +1180,7 @@
                         <img src="assets/images/person2.jpg" alt="" />
                       </div>
                       <div class="comment-item-person-name">
-                        <h6>پریسا رضایی نیا</h6>
+                        <h6>محمدرضا رضایی نیا</h6>
                         <span>توسعه دهنده اندروید</span>
                       </div>
                     </div>
@@ -1271,12 +1276,12 @@
 
     <!-- ------------ Start Stats -------------------------- -->
 
-    <div class="container-fluid stats-container">
+    <div class="container-fluid stats-container ">
       <div class="row">
-        <div class="container stats-items">
+        <div class="container stats-items wow animate__animated animate__heartBeat">
           <div class="row">
-            <div class="col-12 col-md-4">
-              <div class="counter stats-counter" data-target="70"></div>
+            <div class="col-12 col-md-4 ">
+              <div class="counter stats-counter " data-target="70"></div>
               <span>بیش از 70 هزار کاربر فعال روزانه</span>
             </div>
             <div class="col-12 col-md-4">
@@ -1298,14 +1303,14 @@
       <div class="row">
         <div class="container">
           <div class="row">
-            <div class="col-12">
+            <div class="col-12 ">
               <div class="section-title">
                 <h3>مقالات منتشر شده خبری اخیر</h3>
                 <span> مقالات مختلف درباره ی مشاغل گوناگون </span>
               </div>
             </div>
           </div>
-          <div class="row articles">
+          <div class="row articles ">
             <div class="col-12 col-md-4">
               <div class="card article">
                 <div class="article-img">
@@ -1416,7 +1421,7 @@
                  </p>
               </div>
               <div class="footer-logo mt-4">
-                <img src="assets/images/logo-white.png" alt="">
+                <img src="assets/images/logo-white-p.png" alt="">
               </div>
 
            </div>
@@ -1497,5 +1502,6 @@
     ></script>
     <script src="assets/Js/owl.carousel.min.js"></script>
     <script src="assets/Js/script.js"></script>
+   
   </body>
 </html>
